--- a/rootdir/etc/init.baseband.rc
+++ b/rootdir/etc/init.baseband.rc
@@ -3,6 +3,8 @@ on init
     symlink /dev/block/platform/15570000.ufs/by-name/RADIO /dev/mbin0
     restorecon /dev/mbin0
 
+    symlink  /sys/devices/10f24000.mipi-lli /dev/mipi-lli
+
     write /sys/class/net/rmnet0/queues/rx-0/rps_cpus 7
     write /sys/class/net/rmnet1/queues/rx-0/rps_cpus 7
     write /sys/class/net/rmnet2/queues/rx-0/rps_cpus 7
@@ -38,4 +40,3 @@ on property:ro.debuggable=1
 	write /sys/kernel/debug/tracing/buffer_size_kb 1408
 	write /sys/kernel/debug/tracing/set_event modem_if:mif_log
 	write /sys/kernel/debug/tracing/tracing_on 1
-
