zero: Create library for missing Samsung symbols
* First up is Fence::wait needed by Camera HAL

Change-Id: Ie8dbde2632efdc2326426472a10fa6d18b920f6e
Signed-off-by: Brandon McAnsh <brandon.mcansh@gmail.com>

--- a/rootdir/etc/init.samsungexynos7420.rc
+++ b/rootdir/etc/init.samsungexynos7420.rc
@@ -8,6 +8,8 @@ on early-init
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 
 on init
+    export LD_PRELOAD libsamsung_symbols.so
+
     mkdir /preload 0771 system system
 
     # Support legacy paths
